# kernel-based-navigation

./: .gitignore  .gitmodules  .pydevproject  429342  429342.pub  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  MB_actor_critic.py  Makefile  PPO.py  README.md  commit.sh  cover_train.py  debug.py  diffRVO.py  hash.txt  mb_train.py  mb_train_ccd.py  mbmg_train.py  out.txt  pyRVO.py  setup.py  test.py  testMultiRVO.py  testMultiRVO.py.bak  testORCA.py  testRVO.py  train.py  visualize.py  windows_installation.txt
.metadata/: version.ini
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Main/: debug.py  imgui.ini  mainDebug.cpp  mainDebugORCA.cpp  mainDebugRVO.cpp  mainMazeSimulator.cpp  mainMultiSimulator.cpp  mainMultiSimulatorSource.cpp  mainMultiVisibility.cpp  mainSimulator.cpp  mainSimulatorSource.cpp  mainStreetSimulator.cpp  mainVisibility.cpp  mainVisibilityObstacle.cpp  pyRVO.py  testMultiRVO.py  testRVO.py
PPO_logs/Robot-v1/: PPO_Robot-v1_log_1.csv  PPO_Robot-v1_log_103.csv  PPO_Robot-v1_log_104.csv  PPO_Robot-v1_log_106.csv  PPO_Robot-v1_log_109.csv  PPO_Robot-v1_log_110.csv  PPO_Robot-v1_log_111.csv  PPO_Robot-v1_log_112.csv  PPO_Robot-v1_log_113.csv  PPO_Robot-v1_log_143.csv  PPO_Robot-v1_log_144.csv  PPO_Robot-v1_log_165.csv  PPO_Robot-v1_log_166.csv  PPO_Robot-v1_log_18.csv  PPO_Robot-v1_log_181.csv  PPO_Robot-v1_log_182.csv  PPO_Robot-v1_log_184.csv  PPO_Robot-v1_log_185.csv  PPO_Robot-v1_log_186.csv  PPO_Robot-v1_log_187.csv  PPO_Robot-v1_log_188.csv  PPO_Robot-v1_log_189.csv  PPO_Robot-v1_log_19.csv  PPO_Robot-v1_log_190.csv  PPO_Robot-v1_log_191.csv  PPO_Robot-v1_log_192.csv  PPO_Robot-v1_log_193.csv  PPO_Robot-v1_log_195.csv  PPO_Robot-v1_log_196.csv  PPO_Robot-v1_log_197.csv  PPO_Robot-v1_log_198.csv  PPO_Robot-v1_log_199.csv  PPO_Robot-v1_log_2.csv  PPO_Robot-v1_log_20.csv  PPO_Robot-v1_log_200.csv  PPO_Robot-v1_log_201.csv  PPO_Robot-v1_log_208.csv  PPO_Robot-v1_log_209.csv  PPO_Robot-v1_log_22.csv  PPO_Robot-v1_log_24.csv  (+100 more)
PPO_preTrained/Robot-v1/: PPO_Robot-v1_0_0.pth
RVO/: Agent.cpp  Agent.h  BBox.h  BVHNode.cpp  BVHNode.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  CoverageEnergy.cpp  DynamicMatVec.h  Epsilon.cpp  Epsilon.h  Heap.h  LBFGSUpdate.cpp  LBFGSUpdate.h  MultiCoverageEnergy.cpp  MultiRVO.cpp  MultiRVO.h  MultiVisibility.cpp  MultiVisibility.h  ORCA.cpp  ORCA.h  Obstacle.cpp  Obstacle.h  ParallelVector.h  Pragma.h  Python.cpp  RVO.cpp  RVO.h  RVOVisualizer.cpp  RVOVisualizer.h  Reduce.h  Scan.h  SourceSink.cpp  SourceSink.h  SpatialHash.cpp  SpatialHash.h  SpatialHashLinkedList.cpp  SpatialHashLinkedList.h  SpatialHashRadixSort.cpp  SpatialHashRadixSort.h  (+5 more)
RVO2-main/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  RVO.cbp  RVO.cscope_file_list  RVO.layout  RVO.pc  RVOConfigVersion.cmake  RVOTargets.cmake  cmake_install.cmake
RVO2-main/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  stylesheet.css
RVO2-main/examples/: Blocks  Blocks.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Circle  Circle.cpp  Makefile  Roadmap  Roadmap.cpp  cmake_install.cmake
RVO2-main/src/: Agent.cpp  Agent.h  Definitions.h  KdTree.h  Makefile  RVOSimulator.cpp  RVOSimulator.h  Vector2.h  cmake_install.cmake  libRVO.so.2.0.3
Swig/: module.i  module_wrap.cxx  pyrvo.py
beifen/new-rvo/: .gitignore  .project  PPO.py  cmake_install.cmake  commit.sh  cover_train1.py  debug.py  mainDebug  mainMultiSimulator  mainSimulator  mainVisibility  mainVisibilityObstacle  mb_train.py  mbmg_train.py  multi0.avi  pyRVO.py  single0.avi  single1.avi  single2.avi  testMultiRVO.py  testRVO.py  train.py
beifen/new-rvo/Main/: mainDebug.cpp  mainVisibility.cpp
beifen/new-rvo/RVO/: BBox.cpp  BVHNode.h  CoverageEnergy.h  MultiCoverageEnergy.h  MultiRVO.cpp  MultiRVO.h  SpatialHashRadixSort.h  Zero.h  pradsort.hpp
beifen/new-rvo/Swig/: eigen.i
beifen/new-rvo/cmake/: FindNuma.cmake
beifen/new-rvo/robot_envs/: RVO_Layer.py  coverage_env.py  multigroup_robot_env.py  robot_env.py  sparse_cholesky.py  sparse_solver.py  viewer.py
cmake/: FindGMP.cmake  FindNumPy.cmake  FindQUADMATH.cmake  FindTinyVisualizer.cmake  LoadLibs.cmake
examples/: Blocks.cpp  CMakeLists.txt  Circle.cpp  Roadmap.cpp
robot_envs/: Coverage_Layer.py  RVO_Layer.py  RVO_Layer_ccd.py  cdc_rvo.py  cover_env.py  multigroup_robot_env.py  polo.py  robot_env.py  robot_env_ccd.py  softras.py  viewer.py
robot_envs/runs/May12_12-39-04_msi-MS-7A54/: events.out.tfevents.1620794344.msi-MS-7A54
robot_envs/runs/May12_12-41-36_msi-MS-7A54/: events.out.tfevents.1620794496.msi-MS-7A54
robot_envs/runs/May12_12-42-14_msi-MS-7A54/: events.out.tfevents.1620794534.msi-MS-7A54
robot_envs/runs/May12_12-44-10_msi-MS-7A54/: events.out.tfevents.1620794650.msi-MS-7A54
robot_envs/runs/May12_12-48-28_msi-MS-7A54/: events.out.tfevents.1620794908.msi-MS-7A54
robot_envs/runs/May12_12-50-38_msi-MS-7A54/: events.out.tfevents.1620795038.msi-MS-7A54
robot_envs/runs/May12_12-55-03_msi-MS-7A54/: events.out.tfevents.1620795303.msi-MS-7A54
robot_envs/runs/May12_12-55-33_msi-MS-7A54/: events.out.tfevents.1620795333.msi-MS-7A54
robot_envs/runs/May12_12-56-10_msi-MS-7A54/: events.out.tfevents.1620795370.msi-MS-7A54
robot_envs/runs/May12_12-56-37_msi-MS-7A54/: events.out.tfevents.1620795397.msi-MS-7A54
robot_envs/runs/May12_12-57-35_msi-MS-7A54/: events.out.tfevents.1620795455.msi-MS-7A54
robot_envs/runs/May12_13-24-15_msi-MS-7A54/: events.out.tfevents.1620797055.msi-MS-7A54
rvo-new-cmake/: CMakeLists.txt
src/: Agent.cpp  Agent.h  AgentCar.cpp  AgentCar.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Car.cpp  Car.h  Definitions.h  KdTree.cpp  KdTree.h  Makefile  Obstacle.h  RVO.h  RVOMultiSimulator.cpp  RVOMultiSimulator.h  RVOSimulationOptimize.cpp  RVOSimulator.cpp  RVOSimulator.h  RVOSimulatorOptimize.cpp  Vector2.h  cmake_install.cmake  libRVO.so.2  optimize.cpp  rvo2.cpp  rvo2.pyx
(+36 files in other folders)
